# supozy-ai

./: .gitignore  README.md
backend/: .dockerignore  .env_template  .gitignore  Dockerfile  db.py  main.py  pyproject.toml
backend/app/controllers/: agent_controller.py  groq_controller.py  mcp_controller.py
backend/app/models/: model.py
backend/app/routers/: chat_route.py  user_route.py
backend/app/tests/: mcp_client_test.ipynb
backend/app/utils/: helper_functions.py
frontend/: .env_template  Dockerfile  next.config.ts  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/chat/: page.tsx
frontend/components/ui/: flip-words.tsx
frontend/hooks/: useApiError.tsx  useConversationManager.tsx  useUserTimezone.tsx
frontend/lib/: QueryClientProvider.tsx  api.ts  utils.ts
